syntax = "proto3";
package empowerchain.plasticcredit;

option go_package = "github.com/empowerchain/empowerchain/x/plasticcredit/types";

message IdCounters {
  uint64 issuer_id = 1; 
  uint64 collector_id = 2; 
  uint64 project_id = 3; 
  uint64 credit_class_id = 4; 
  
}
